kubernetes/bank-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bank-app
spec:
  containers:
  - name: bank-app
    image: ghcr.io/team-aaaaaaaaaaaaaaaa/bank_app:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 5000
    resources:
      limits:
        cpu: "0.5"
        memory: "512Mi"
      requests:
        cpu: "0.2"
        memory: "256Mi"
    securityContext:
      allowPrivilegeEscalation: false
