kubernetes/cdn-server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cdn-server
spec:
  containers:
  - name: cdn-server
    image: ghcr.io/team-aaaaaaaaaaaaaaaa/cdn:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: "0.5"
        memory: "512Mi"
      requests:
        cpu: "0.2"
        memory: "256Mi"
    securityContext:
      allowPrivilegeEscalation: false
