kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-app
  template:
    metadata:
      labels:
        app: bank-app
    spec:
      containers:
      - name: bank-app
        image: bank-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdn
  template:
    metadata:
      labels:
        app: cdn
    spec:
      containers:
      - name: cdn
        image: cdn:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-app
  template:
    metadata:
      labels:
        app: social-app
    spec:
      containers:
      - name: social-app
        image: social-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dns-server
  template:
    metadata:
      labels:
        app: dns-server
    spec:
      containers:
      - name: dns-server
        image: dns-server:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 53
          protocol: UDP
        - containerPort: 53
          protocol: TCP
