kubernetes/wall-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wall-app
spec:
  containers:
  - name: wall-app
    image: ghcr.io/team-aaaaaaaaaaaaaaaa/wall_app:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: "0.5"
        memory: "512Mi"
      requests:
        cpu: "0.2"
        memory: "256Mi"
    securityContext:
      allowPrivilegeEscalation: false
