kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-app-service
spec:
  selector:
    app: bank-app
  ports:
  - port: 80
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cdn-service
spec:
  selector:
    app: cdn
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: social-app-service
spec:
  selector:
    app: social-app
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dns-service
spec:
  type: NodePort
  selector:
    app: dns-server
  ports:
  - port: 53
    nodePort: 30053
    protocol: UDP
  - port: 53
    nodePort: 30053
    protocol: TCP
